--- a/released/MyBox/pom.xml
+++ b/released/MyBox/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>MyBox</artifactId>
     <version>6.4.7</version>
     <packaging>jar</packaging>
-    <name>MyBox</name>
+    <name>MyBox release</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>mara.mybox.MyBox</mainClass>
@@ -191,7 +191,7 @@
         <dependency>
             <groupId>net.sf.image4j</groupId>
             <artifactId>image4j</artifactId>
-            <version>0.7.2</version>
+            <version>0.7zensight1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
